# yaer

./: .gitignore  README.org
Backend/TaskTracker/: README.org  pyproject.toml  tasks
Backend/TaskTracker/tasktracker/: main.py
Backend/TodoListAPI/: README.md  pyproject.toml
Backend/TodoListAPI/todolistapi/: main.py
Backend/WorkoutTracker/: README.org  pyproject.toml
Backend/WorkoutTracker/src/api/: main.py
Backend/WorkoutTracker/src/cli/: main.py
Backend/WorkoutTracker/src/seeder/: main.py  seeder.sql
Drafts/: arithmetic_2d_patterns.lua
Drafts/ANSI Codes/: cli-form.lua
Drafts/Benchmarking/Sum/: README.md  log.txt  run_sum_benchmarks  sum-c  sum-c-o3  sum-go  sum-nelua  sum-nelua-r  sum.c  sum.fish  sum.fnl  sum.go  sum.janet  sum.jimage  sum.lua  sum.luac  sum.luaj  sum.nelua  sum.nu  sum.py  sum.sh  sum.tic
Drafts/Command Line Arguments Parsing/: sayit.fnl  test.fish
Drafts/Encryption/: caesar-cipher.py
Drafts/File Interactions/: timetable.csv  try-csv.lua  trying-sha256sum.lua
Drafts/OOP/: animal.py  fennel-oop-2.fnl  fennel-oop.fnl  lua-oop.lua
Drafts/Quera_Problemset/: 14583-binary-kevin-gpt-version.py  14583-binary-kevin-quick.py  14583-binary-kevin.py  220658.sh  265771-utcpc.2.lua  265771-utcpc.lua  265771-utcpc.py  291521.sh  291521_solved.sh  291522.sh  291610-phone-numbers.py  658-farzad.py  9774.py
Mine80/: coin.lua
Tutorials/Data Structures - Lua/: 1.task_scheduler.lua
