[tool.poetry]
name = "tasktracker"
version = "0.1.0"
description = "https://roadmap.sh/projects/task-tracker"
authors = ["Behnam <wired_unwell@noreply.codeberg.org>"]
license = "GPL-3.0"
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
prettytable = "^3.12.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tasktracker = "tasktracker.main:cli"
