[tool.poetry]
name = "todolistapi"
version = "0.1.0"
description = "A TODO List API to learn stuff."
authors = ["Behnam <wired_unwell@noreply.codeberg.org>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"
click = "^8.1.7"
flask-sqlalchemy = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
todolistapi = "todolistapi.main:main"
