[tool.poetry]
name = "workouttracker"
version = "0.1.0"
description = "A simple Workout Tracker API"
authors = ["Behnam <wired_unwell@noreply.codeberg.org>"]
license = "AGPL-3.0-only"
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
click = "^8.1.7"
flask-sqlalchemy = "^3.1.1"
authlib = "^1.3.2"
flask-jwt-extended = "^4.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
bandit = "^1.8.0"
flasgger = "^0.9.7.1"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
workout-cli = 'cli.main:main'
workout-serve = 'api.main:main'
